--- a/src/app/docs/get-started/page.mdx
+++ b/src/app/docs/get-started/page.mdx
@@ -19,15 +19,20 @@ title: Get Started
 ## 2. 제품 투어 (60–90분)
 
 <Steps>
-  <Steps.Step title="중고거래 흐름 파악">
-    구매/판매 전 과정을 앱 기준으로 따라가며 용어를 기록합니다.
-  </Steps.Step>
-  <Steps.Step title="동네생활/동네가게 이해">
-    게시/발행/쿠폰/후기 등 핵심 이벤트를 지도처럼 정리합니다.
-  </Steps.Step>
-  <Steps.Step title="비즈니스/광고 살펴보기">
-    비즈/브랜드 프로필 생성 흐름과 지역 타게팅 개념을 익힙니다.
-  </Steps.Step>
+
+### 중고거래 흐름 파악
+
+구매/판매 전 과정을 앱 기준으로 따라가며 용어를 기록합니다.
+게시/발행/쿠폰/후기 등 핵심 이벤트를 지도처럼 정리합니다.
+
+### 동네생활/동네가게 이해
+
+비즈/브랜드 프로필 생성 흐름과 지역 타게팅 개념을 익힙니다.
+
+### 비즈니스/광고 살펴보기
+
+비즈/브랜드 프로필 생성 흐름과 지역 타게팅 개념을 익힙니다.
+
 </Steps>
 
 ## 3. 신뢰/안전 원칙 (30분)
