--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -2,11 +2,13 @@
 title: 당근 온보딩
 ---
 
+import { Callout, Cards, Steps, Tabs } from "nextra/components";
+
 # 당신 근처의 지역 생활 커뮤니티
 
 <Callout emoji="🥕">
   이 문서는 당근을 처음 접하는 분들을 위한 온보딩 가이드입니다. 핵심 개념,
-  서비스 맵, 팀문화, 블로그까지 한 에서 빠르게 훑어보세요.
+  서비스 맵, 팀문화, 블로그까지 한 곳에서 빠르게 훑어보세요.
 </Callout>
 
 <Cards num={4}>
@@ -32,33 +34,33 @@ title: 당근 온보딩
     확인하세요.
   </Steps.Step>
   <Steps.Step title="서비스 맵 따라가기">
-    [서비스](/service)에서 사용자 여정과 주요 기능군을 훑으며 전반을 파악합니다.
+    [서비스](/service)에서 사용자 여정과 주요 기능군을 훑으며 전반을 파악하세요.
   </Steps.Step>
   <Steps.Step title="팀문화와 함께 일하길 준비">
-    [팀문화](/culture)에서 협업 철학과 기대 방식(자율·책임·임팩트)을 익힙니다.
+    [팀문화](/culture)에서 협업 철학과 기대 방식(자율·책임·임팩트)을 익히세요.
   </Steps.Step>
   <Steps.Step title="최신 소식 팔로우">
-    [블로그](/blog)에서 최근 출시/사례/기술 글을 구독하며 컨텍스트를 유지합니다.
+    [블로그](/blog)에서 최근 출시/사례/기술 글을 구독하며 컨텍스트를 유지하세요.
   </Steps.Step>
 </Steps>
 
 ## 핵심 하이라이트
 
 <Tabs items={["서비스", "비즈니스", "신뢰/안전"]}>
-  <div>
-    - 중고거래: 동네 인증·매너온도·머신러닝 기반 분석으로 안전한 거래 경험 -
-    동네생활: 맛집·모임·일상 공유 등 동네 실시간 이야기 - 동네가게:
-    쿠폰·후기·소식으로 근처 가게를 발견하고 연결 - 알바/중고차/부동산/페이: 생활
-    전반의 수요를 하나로 묶는 확장
-  </div>
-  <div>
+  <Tabs.Tab>
+    - 중고거래: 동네 인증·매너온도·ML 기반 분석으로 안전한 거래 경험 - 동네생활:
+    맛집·모임·일상 공유 등 동네 실시간 이야기 - 동네가게: 쿠폰·후기·소식으로
+    근처 가게를 발견하고 연결 - 알바/중고차/부동산/페이: 생활 전반의 수요를
+    하나로 묶는 확장
+  </Tabs.Tab>
+  <Tabs.Tab>
     - 당근비즈니스: 비즈/브랜드 프로필과 광고로 이웃을 고객으로 전환 - 지역
-    타게팅 광고: 읍·면·동 단위의 정교한 리치와 효율
-  </div>
-  <div>
+    타게팅 광고: 읍·면·동 단위의 정교한 도달과 효율
+  </Tabs.Tab>
+  <Tabs.Tab>
     - 허위/불법 매물 감시와 필터링, 게시글 분석 등 신뢰·안전 체계 고도화 -
-    매너온도, 동네 인증, ML 기반 리스크 감지로 사용자 보호 강화
-  </div>
+    매너온도·동네 인증·ML 기반 리스크 감지로 사용자 보호 강화
+  </Tabs.Tab>
 </Tabs>
 
 ## 바로가기 링크 집합
@@ -69,19 +71,6 @@ title: 당근 온보딩
 | 서비스   | https://about.daangn.com/service/ |
 | 팀문화   | https://about.daangn.com/culture/ |
 | 블로그   | https://about.daangn.com/blog/    |
-
-<Callout type="info" emoji="🔗">
-  원문 참고: [회사소개](https://about.daangn.com/company/),
-  [서비스](https://about.daangn.com/service/),
-  [팀문화](https://about.daangn.com/culture/),
-  [블로그](https://about.daangn.com/blog/)
-</Callout>
-
-## 다음 단계
-
-- 첫 탐색: [서비스](/service) → 각 기능군 개요 확인
-- 조직 이해: [팀문화](/culture) → 협업 원칙 숙지
-- 최신 뉴스: [블로그](/blog) → 주요 이슈 팔로우
 
 <Callout type="success" emoji="🚀">
   시작해볼까요? 오른쪽 사이드바에서 원하는 섹션을 바로 열어보세요.
