--- a/src/app/docs/get-started/page.mdx
+++ b/src/app/docs/get-started/page.mdx
@@ -56,4 +56,4 @@ title: Get Started
 <Callout type="info" emoji="🧭">
   첫 주에는 맥락을 넓게 수집하고, 둘째 주부터는 팀 목표에 맞는 문제 정의와
   실행에 집중하세요.
-</Callout>{" "}
+</Callout>
