docs: 사내 가이드 작성

--- a/src/app/service/stackflow/concepts/page.mdx
+++ b/src/app/service/stackflow/concepts/page.mdx
@@ -40,7 +40,7 @@ import { Callout, Table } from "nextra/components";
 
 ## 흐름(예시)
 
-```md
+```markdown
 - 홈 → 상품 상세(push)
 - 상세 → 결제 모달(push)
 - 결제 완료 → 상세(pop)
